Section Headers Sizing Cutoff Fix

--- a/src/index.css
+++ b/src/index.css
@@ -186,7 +186,7 @@ body {
 
         animation: build-out 1.75s ease-in-out .25s forwards;
 
-        @apply flex justify-center items-start lg:p-9 md:p-7 sm:px-5 px-3 py-3 border-2  transition-all;
+        @apply flex justify-center items-start lg:p-9 md:p-7 sm:px-5 p-3 border-2  transition-all;
     }
 
     .main-arrow {
@@ -231,7 +231,7 @@ body {
         text-shadow: 0 0 1em currentColor,
                      0 0 .0375em white;
 
-        @apply flex gap-2 self-center lg:m-5 md:m-4 sm:m-3 m-2 mb-4 lg:text-2xl md:text-xl sm:text-lg text-sm select-none;
+        @apply flex items-center flex-wrap gap-1 self-center lg:m-5 md:m-4 sm:m-3 m-2 mb-4 lg:text-2xl md:text-xl sm:text-lg text-sm select-none;
     }
 
     .section-help {
